# devrelwriter

./: .gitignore  README.md  pyproject.toml  {output_blog_path}  {output_tweet_path}
src/devrelwriter/: crew.py  main.py
src/devrelwriter/config/: agents.yaml  tasks.yaml
